// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard Debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;

exports[`ProductCard Debe de mostrar el componente con el nombre del producto 2`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;
